chore: ShellHacks 2026 update
