# internal/api/types.gen.go
@@ -1,14 +1,28 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.8.0 DO NOT EDIT.
 package api
 
-// Defines values for NewRubberDuckSize.
+// Defines values for DuckRequestSize.
 const (
-	NewRubberDuckSizeLarge  NewRubberDuckSize = "large"
-	NewRubberDuckSizeMedium NewRubberDuckSize = "medium"
-	NewRubberDuckSizeSmall  NewRubberDuckSize = "small"
+	DuckRequestSizeLarge  DuckRequestSize = "large"
+	DuckRequestSizeMedium DuckRequestSize = "medium"
+	DuckRequestSizeSmall  DuckRequestSize = "small"
 )
+
+// Valid indicates whether the value is a known member of the DuckRequestSize enum.
+func (e DuckRequestSize) Valid() bool {
+	switch e {
+	case DuckRequestSizeLarge:
+		return true
+	case DuckRequestSizeMedium:
+		return true
+	case DuckRequestSizeSmall:
+		return true
+	default:
+		return false
+	}
+}
 
 // Defines values for RubberDuckSize.
 const (
@@ -17,32 +31,61 @@ const (
 	RubberDuckSizeSmall  RubberDuckSize = "small"
 )
 
+// Valid indicates whether the value is a known member of the RubberDuckSize enum.
+func (e RubberDuckSize) Valid() bool {
+	switch e {
+	case RubberDuckSizeLarge:
+		return true
+	case RubberDuckSizeMedium:
+		return true
+	case RubberDuckSizeSmall:
+		return true
+	default:
+		return false
+	}
+}
+
+// DuckRequest defines model for DuckRequest.
+type DuckRequest struct {
+	Color string          `json:"color"`
+	Name  string          `json:"name"`
+	Size  DuckRequestSize `json:"size"`
+}
+
+// DuckRequestSize defines model for DuckRequest.Size.
+type DuckRequestSize string
+
+// DucksResponse defines model for DucksResponse.
+type DucksResponse struct {
+	Ducks []RubberDuck `json:"ducks"`
+}
+
 // Error defines model for Error.
 type Error struct {
-	Code    int    `json:"code"`
+	// Code Example: 400
+	Code int `json:"code"`
+
+	// Message Example: Invalid request.
 	Message string `json:"message"`
 }
 
-// NewRubberDuck defines model for NewRubberDuck.
-type NewRubberDuck struct {
-	Color string            `json:"color"`
-	Name  string            `json:"name"`
-	Size  NewRubberDuckSize `json:"size"`
-}
-
-// NewRubberDuckSize defines model for NewRubberDuck.Size.
-type NewRubberDuckSize string
-
 // RubberDuck defines model for RubberDuck.
 type RubberDuck struct {
-	Color string         `json:"color"`
-	Id    int            `json:"id"`
-	Name  string         `json:"name"`
-	Size  RubberDuckSize `json:"size"`
+	// Color Example: yellow
+	Color string `json:"color"`
+
+	// ID Example: 1
+	ID int `json:"id"`
+
+	// Name Example: Classic Yellow
+	Name string `json:"name"`
+
+	// Size Example: medium
+	Size RubberDuckSize `json:"size"`
 }
 
-// RubberDuckSize defines model for RubberDuck.Size.
+// RubberDuckSize Example: medium
 type RubberDuckSize string
 
 // CreateDuckJSONRequestBody defines body for CreateDuck for application/json ContentType.
-type CreateDuckJSONRequestBody = NewRubberDuck
+type CreateDuckJSONRequestBody = DuckRequest
